--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,15 @@
         android:theme="@style/Theme.EraportSD"
         tools:targetApi="31">
         <activity
+            android:name=".Biodata"
+            android:exported="false" />
+        <activity
+            android:name=".Drawer"
+            android:exported="false" />
+        <activity
+            android:name=".Dasboard"
+            android:exported="false" />
+        <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
